extends Control



func _on_new_game_button_down() -> void:
	pass # Replace with function body.



func _on_continue_button_down() -> void:
	pass # Replace with function body.



func _on_options_button_down() -> void:
	pass # Replace with function body.



func _on_threat_documentation_button_down() -> void:
	pass # Replace with function body.



func _on_exit_button_down() -> void:
	get_tree().quit()
